<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="vertical"
    tools:context=".EditorCdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/headlines"
            android:text="@string/cd_info" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/product_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:hint="@string/title"
                android:inputType="text"
                android:padding="@dimen/eight_dp" />

            <EditText
                android:id="@+id/price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:paddingEnd="@dimen/eight_dp"
                android:paddingStart="@dimen/eight_dp" />

            <EditText
                android:id="@+id/quantity_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:hint="@string/quantity"
                android:inputType="number"
                android:padding="@dimen/eight_dp" />

            <EditText
                android:id="@+id/artist_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:hint="@string/artist" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:padding="@dimen/eight_dp"
                android:text="@string/select_genre"
                android:textColor="@color/select_green"
                android:textSize="@dimen/sixteen_sp_text" />

            <Spinner
                android:id="@+id/genre_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/sixteen_dp">

            </Spinner>


        </LinearLayout>

    </LinearLayout>

    <!-- Icon made by Gregor Cresnar from www.flaticon.com -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/music_note"
        android:padding="@dimen/thirty_two_dp"
        android:src="@drawable/musical_note" />

</LinearLayout>